# universal_cmake

./: CMakeLists.txt  README.md  build.cmake  universal_version.cpp.in  universal_version.hpp
